# student-affairs

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml  test_ui.html
src/: config.py  config_schema.py  inh_accounts_sdk.py  prepare.py
src/api/: __init__.py  __main__.py  app.py  auth.py  dependencies.py  docs.py  lifespan.py  schemas.py
src/api/routers/: cases.py  sso.py
src/modules/: inh_accounts_sdk.py
src/modules/sso/: routes.py
src/omnidesk_bot/: auth.py  main.py  omnidesk.py
src/omnidesk_bot/routers/: cases.py
